# IPPhone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  main.cpp  tcp_connect.hpp
common/: CMakeLists.txt  endpoint.hpp
common/params/: communication.hpp  sound.hpp
common/pulseaudio/: context.cpp  context.hpp  exception.hpp  mainloop.cpp  mainloop.hpp  playback_stream.cpp  playback_stream.hpp  record_stream.cpp  record_stream.hpp  stream_base.cpp  stream_base.hpp
server/: CMakeLists.txt  main.cpp  tcp_accept.hpp
